--- a/web/viewer.html
+++ b/web/viewer.html
@@ -9,12 +9,13 @@
     <body>
         <h1>Data viewer</h1>
         <div id="container"></div>
-        <script src="../common/js_objects/samples.js"></script>
+        <script src="../common/js_objects/features.js"></script>
         <script src="../common/constants.js"></script>
         <script src="../common/utils.js"></script>
         <script src="js/display.js"></script>
 
         <script>
+            const {samples, featuresNames} = features
              const groups = utils.groupBy(samples, "student_id");
 
              for(let student_id in groups) {
