--- a/web/viewer.html
+++ b/web/viewer.html
@@ -8,11 +8,13 @@
 
     <body>
         <h1>Data viewer</h1>
+        <div id="chartContainer"></div>
         <div id="container"></div>
         <script src="../common/js_objects/features.js"></script>
         <script src="../common/constants.js"></script>
         <script src="../common/utils.js"></script>
         <script src="js/display.js"></script>
+        <script src="https://www.gstatic.com/charts/loader.js"></script>
 
         <script>
             const {samples, featuresNames} = features
@@ -24,6 +26,45 @@
 
                 createRow(container, student_name, samples);
              }
+
+             const options = {
+                width: 400,
+                height: 400,
+                hAxis: {title: featuresNames[0]},
+                vAxis: {title: featuresNames[1]},
+                legend: {position:'none'},
+                explorer: {
+                    maxZoomIn: 0.01,
+                    actions: ['dragToZoom', 'rightClickToReset']
+                }
+             };
+
+             google.charts.load('current',
+                {'packages':['corechart', 'scatter']}
+             );
+
+             google.charts.setOnLoadCallback(() => {
+                const data = new google.visualization.DataTable();
+                data.addColumn('number', featuresNames[0]);
+                data.addColumn('number', featuresNames[1]);
+                data.addColumn({'type': 'string', 'role': 'style'});
+                data.addRows(samples.map(s => [
+                    ...s.point,
+                    utils.styles[s.label]
+                ]));
+
+                /*
+                const chart = new google.visualization.ScatterChart(chartContainer);
+                chart.draw(data, options);
+                */
+
+                const chart = new google.charts.Scatter(chartContainer);
+                chart.draw(data, 
+                            google.charts.Scatter.convertOptions(options)
+                );
+
+             });
+
         </script>
     </body>
 </html>
