--- a/web/viewer.html
+++ b/web/viewer.html
@@ -9,12 +9,25 @@
     <body>
         <h1>Data viewer</h1>
         <div id="chartContainer"></div>
+        <div id="inputContainer"></div>
+        <div id="controlPanel">
+            <button onclick="toggleInput()">Toggle Input</button>
+        </div>
+
         <div id="container"></div>
         <script src="../common/js_objects/features.js"></script>
+
         <script src="../common/constants.js"></script>
         <script src="../common/utils.js"></script>
+        <script src="../common/draw.js"></script>
+        <script src="../common/featureFunctions.js"></script>
+
         <script src="js/display.js"></script>
-        <script src="https://www.gstatic.com/charts/loader.js"></script>
+        <script src="js/sketchPad.js"></script>
+
+        <script src="./chart/chart.js"></script>
+        <script src="./chart/graphics.js"></script>
+        <script src="./chart/math.js"></script>
 
         <script>
             const {samples, featuresNames} = features
@@ -28,43 +41,31 @@
              }
 
              const options = {
-                width: 400,
-                height: 400,
-                hAxis: {title: featuresNames[0]},
-                vAxis: {title: featuresNames[1]},
-                legend: {position:'none'},
-                explorer: {
-                    maxZoomIn: 0.01,
-                    actions: ['dragToZoom', 'rightClickToReset']
-                }
+                size: 500,
+                axesLabels: featuresNames,
+                styles: utils.styles,
+                transparency: 0.7,
+                icon: 'image'
              };
+             graphics.generateImages(utils.styles);
 
-             google.charts.load('current',
-                {'packages':['corechart', 'scatter']}
+             const chart = new Chart(
+                chartContainer,
+                samples,
+                options,
+                handleClick
              );
 
-             google.charts.setOnLoadCallback(() => {
-                const data = new google.visualization.DataTable();
-                data.addColumn('number', featuresNames[0]);
-                data.addColumn('number', featuresNames[1]);
-                data.addColumn({'type': 'string', 'role': 'style'});
-                data.addRows(samples.map(s => [
-                    ...s.point,
-                    utils.styles[s.label]
-                ]));
+             const sketchPad = new SketchPad(inputContainer, onDrawingUpdate); 
+             sketchPad.canvas.style.cssText += "outline: 1000px solid rgba(0,0,0,0.7);";
 
-                /*
-                const chart = new google.visualization.ScatterChart(chartContainer);
-                chart.draw(data, options);
-                */
-
-                const chart = new google.charts.Scatter(chartContainer);
-                chart.draw(data, 
-                            google.charts.Scatter.convertOptions(options)
-                );
-
-             });
-
+             function onDrawingUpdate(paths) {
+                const point = [
+                    featureFunctions.getPathCount(paths),
+                    featureFunctions.getPointCount(paths)
+                ];
+                chart.showDynamicPoint(point);
+             }
         </script>
     </body>
 </html>
