--- a/web/viewer.html
+++ b/web/viewer.html
@@ -9,7 +9,9 @@
     <body>
         <h1>Data viewer</h1>
         <div id="chartContainer"></div>
-        <div id="inputContainer"></div>
+        <div id="inputContainer">
+            <div id="predictedLabelContainer"></div>
+        </div>
         <div id="controlPanel">
             <button onclick="toggleInput()">Toggle Input</button>
         </div>
@@ -60,12 +62,23 @@
              sketchPad.canvas.style.cssText += "outline: 1000px solid rgba(0,0,0,0.7);";
 
              function onDrawingUpdate(paths) {
-                const point = [
-                    featureFunctions.getPathCount(paths),
-                    featureFunctions.getPointCount(paths)
-                ];
-                chart.showDynamicPoint(point);
+                const functions = featureFunctions.inUse.map(f=>f.function);
+                point = functions.map(f=>f(paths));
+
+                const {label, nearestSample} = classify(point);
+                predictedLabelContainer.innerHTML = "Is it a " + label + "?";
+
+                chart.showDynamicPoint(point, label, nearestSample);
+             }
+
+             function classify(point) {
+                const samplePoints = samples.map(s => s.point);
+                const index = utils.getNearest(point, samplePoints);
+                const nearestSample = samples[index];
+                return {label:nearestSample.label, nearestSample};
              }
         </script>
+        https://youtu.be/c4VVPPy8zIE?t=1246
+        https://youtu.be/c4VVPPy8zIE?t=2196
     </body>
 </html>
